# lupine

./: .gcloudignore  .gcloudignore-library  .gitignore  AGENTS.md  CHANGELOG.md  DESIGN_GUIDE.md  GLOSSARY.md  LICENSE  MOBILE_STITCH_STRATEGY.md  README.md  RESEARCH-CHAIN.md  RESEARCH.md  STATUS.md  ancillary-research-opps.json  ancillary-research-opps.md  artboard.html  build_research.py  chinese-md-sources.md  deep-research-report.md  example-research-papers.md  extract.js  foundational-research.md  generate_veo.py  justfile  log.lammps  phase2_plan.md  refactor_gallery.py  replace_css_vars.py  replace_grids.py  replace_manifesto.py  test_native_views.py  test_stitch.mjs  test_wasm.js  thinking-steps.md  tmp.sdf  tmp2.sdf  todo.py
.claude/: settings.local.json
.sisyphus/: ralph-loop.local.md
asylum/: asylum.md.txt  demo_re.py  demo_research.py  demo_tester.py  requirements.txt  verify_asylum.py  verify_auth.py  verify_auth_upgrade.py  verify_expanded.py  verify_keyring.py
atlas/: ATLAS-architecture.jsx  ATLAS-presentation.jsx  HYPE-TRAILER-SUMMARY.md  atlas-view-3d-melt.jsx  atlas-view-3d-smooth.jsx  atlas-view-app.jsx  atlas-view-demo.jsx  atlas-view-enhanced.jsx  atlas-view-gallery.jsx  atlas-view-mobile-v2.jsx  atlas-view-mobile.jsx  atlas-view-preview.jsx  atlas-view-publication.jsx  atlas-view-real-data.jsx  atlas-view-timeseries.jsx  auction-strategy-plan.md  business-architecture-plan.md  case-for-china-development.md  china-all-in-commitment-plan.md  deploy_full.py  deploy_optimized.py  deploy_slim.py  deploy_web.py  dump.crack2d.lammpstrj  engagement-checklist-week1.md  generate_advanced_samples.py  generate_ase_samples.py  generate_gallery.py  generate_research_data.py  generate_scale_tests.py  glim-project-plan.md  glimPSE-FINAL-VERIFIED.md  glimPSE-NEEDLE-SUMMARY.md  glimPSE-VERIFICATION-REPORT.md  glimPSE-enhanced-README.md  glimPSE-example-gallery.md  glimPSE-improvements.md  glimPSE-needle-integration.md  glimPSE-product-plan.md  glimPSE-smooth-playback-example.md  (+9 more)
atlas-distill/: Cargo.toml  Dockerfile  README.md  bcc_manifold_analysis.json  bcc_validation_report.json  benchmark_manifold.json  benchmark_manifold_5d.json  benchmark_meta.json  cloudbuild.yaml  manifold_analysis.json  meta_analysis.json  papers.extracted.json  paradox_detection.json  statics_validation_report.json  validation_report.json
atlas-distill/.atlas-cache/: P01.json  P02.json  P06.json  P07.json  P08.json  P09.json  P10.json  P11.json  P12.json  P13.json  P14.json  P16.json  P17.json  P19.json  P22.json  P23.json  P24.json  P25.json  P38.json  P44.json  P46.json  P48.json  P49.json  P50.json  P51.json  P52.json  P60.json
atlas-distill/benchmarks/: README.md
atlas-distill/discovery_ledger/: claims.jsonl  records.jsonl
atlas-distill/examples/: anomalous_diffusion.dump
atlas-distill/scripts/: publish.ps1
atlas-distill/src/: autoresearch.rs  benchmark.rs  causal.rs  formalize.rs  main.rs  manifold.rs  meta_analysis.rs  nist.rs  pipeline.rs  runner.rs  stats.rs  validation.rs
atlas-distill/src/agents/: lammps_agent.rs  literature_agent.rs  manifold_agent.rs  mod.rs  null_model_agent.rs  orchestrator.rs  paradox_agent.rs
atlas-distill/src/commands/: auto_research.rs  emit_beat.rs  mod.rs
atlas-distill/src/discovery/: scan.rs
atlas-distill/src/domain/: mod.rs  provenance.rs
atlas-distill/src/fitting/: arrhenius.rs  levenberg.rs  linear.rs  polynomial.rs  power_law.rs
atlas-distill/src/ingest/: thermo.rs  trajectory.rs
atlas-distill/src/literature/: corpus.rs  dataset.rs  extract.rs  fetch.rs  seeds.rs
atlas-distill/src/observables/: mod.rs  rdf.rs
atlas-launch-video/: capture.js  index.html  meta.json  package-lock.json  package.json  rewrite_hype.py
atlas-tui/: Cargo.toml
atlas-tui/junk/: parser.rs.bak  renderer.rs.bak  shader.wgsl.bak
atlas-tui/src/: main.rs
atlas-view-native/: Cargo.toml  build_web.sh  generate_recordings.bat  serve_web.bat
atlas-view-native/src/: bonds.rs  camera.rs  coloring.rs  engine.rs  gui.rs  main.rs
atlas-view-native/src/parsers/: data.rs  dump.rs  mod.rs  types.rs
atlas-view-native/src/shaders/: atom.wgsl  bonds.wgsl  compute_bonds.wgsl
axiom/: Cargo.toml  axiom.md.txt  ingest_roms.py
axiom/src/: main.rs
axiom/src/capsule/: manager.rs
axiom/src/cortex/: llm_bridge.rs  mod.rs
axiom/src/nucleus/: engine.rs
axiom/src/ouroboros/: mod.rs  n64.rs
business-plan/: EXECUTIVE_SUMMARY.md  IC_MEMO.md  README.md
distill-cli/: Cargo.toml
distill-cli/src/: extractor.rs  main.rs  ontology.rs  parser.rs
distiller/: .env.example  README.md  __init__.py  __main__.py  cli.py  export.py  extract.py  graph.py  ingest.py  knowledge_base.json  schema.py  seeds.py
docs/: EXTRACTION_COMPLETE.md  EXTRACTION_NOTES.md  EXTRACTION_REPORT.md  KEY_FINDINGS_SUMMARY.md  data-provenance.md  formal-audit.md  formal-hypotheses.md  formal-manifesto.md  formal-methodology.md  formal-proof-ledger.md  navigation.md  research-index.md  research_evolution_2026_05_05.md  resource-fabric.md
glim-think/: .gitignore  OBSERVABILITY.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  schema.sql  tsconfig.json  vitest.config.ts  worker-configuration.d.ts  wrangler.toml
latest/: sourcesnotebooklm318.txt
lean-spec/: OpenDistillationFactory.lean  README.md  (+2 more)
lupine-distill/: .gitignore  Cargo.toml
lupine-distill/src/: cross_style.rs  lib.rs  main.rs  null_model.rs  orthogonalize.rs  rank_correlation.rs  test_fixtures.rs  worker_sync.rs
lupine-distill/src/bridge/: mod.rs
lupine-distill/src/db/: ingest.rs  ledger.rs  mod.rs  query.rs  schema.rs
lupine-distill/src/hypothesis/: fingerprint.rs  manifold.rs  mod.rs  ribbon_stress.rs  transfer.rs
lupine-distill/src/literature/: investigate.rs  mod.rs  search.rs
lupine-distill/tests/: vectorize_schema.rs
lupine-dspy/: pyproject.toml
lupine-dspy/lupine_dspy/: __init__.py  bridge.py  cli.py  data.py  models.py  modules.py  schemas.py  signatures.py
lupine-ops/: Cargo.toml  README.md
lupine-ops/src/: elastic.rs  ledger.rs  lib.rs  manifest.rs  mlip_ops.rs  nist_resolver.rs
(+1535 files in other folders)
