[package]
name = "atlas-tui"
version = "0.1.0"
edition = "2021"
description = "ATLAS Viewer Dashboard - Control center with molecular aesthetics"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1.0"
chrono = "0.4"
rand = "0.8"
sysinfo = "0.33"

[profile.release]
opt-level = 3
lto = true
