[package]
name = "atlas-view-native"
version = "0.1.0"
edition = "2021"
description = "Native WGPU atom visualizer for LAMMPS molecular dynamics"

[dependencies]
# Graphics & Windowing
wgpu = { version = "0.19", features = ["webgl"] }
winit = "0.29"
pollster = "0.3"
nalgebra-glm = "0.18"

# Utils
bytemuck = { version = "1.15", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
image = "0.24"
egui = "0.27"
egui-winit = { version = "0.27", default-features = false, features = ["links"] }
egui-wgpu = "0.27"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "HtmlElement"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
