[package]
name = "axiom"
version = "0.1.0"
edition = "2021"

[dependencies]
# Graphics & Windowing
winit = "0.29"
wgpu = "0.19"
pollster = "0.3"

# AI / ML
# candle-core = "0.3.3"
# candle-nn = "0.3.3"

# Async & Utils
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
