[package]
name = "lupine-distill"
version = "0.1.0"
edition = "2021"
description = "Ground-truth research engine for interatomic potential discovery"

[[bin]]
name = "distill"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
nalgebra = "0.33"

[profile.release]
opt-level = 3
lto = true
