[package]
name = "lupine-distill"
version = "0.1.0"
edition = "2021"
description = "Ground-truth research engine for interatomic potential discovery"

[lib]
name = "lupine_distill"
path = "src/lib.rs"

[[bin]]
name = "distill"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
nalgebra = "0.33"
# Semantic Scholar / arXiv HTTP fetches for `distill investigate`.
ureq = { version = "2", features = ["json", "tls"] }
url = "2"

[profile.release]
opt-level = 3
lto = true
