[project]
name = "lupine-dspy"
version = "0.1.0"
description = "DSPy-based reasoning agents for interatomic potential validation in the Lupine research pipeline"
requires-python = ">=3.11"
dependencies = [
    "dspy>=3.2.0",
    "pydantic>=2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
lupine-dspy = "lupine_dspy.cli:main"
