[package]
name = "lupine-ops"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

# Cloud Run / Cloud Monitoring polling binary deps. Gated behind the
# `monitor` feature so the core library stays lightweight for downstream
# crates that only need ledger/manifest/mlip types.
anyhow = { version = "1.0", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
gcp_auth = { version = "0.12", optional = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal"], optional = true }
time = { version = "0.3", features = ["formatting", "macros", "parsing"], optional = true }

[features]
default = ["monitor"]
monitor = ["anyhow", "clap", "gcp_auth", "reqwest", "tokio", "time"]

[[bin]]
name = "monitor_cloud_run"
path = "src/bin/monitor_cloud_run.rs"
required-features = ["monitor"]
